--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
+    "vue": "^1.0.26",
     "vue-router": "^0.7.13"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "file-loader": "^0.9.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
+    "vue-bootstrap-modal": "^0.1.13",
     "vue-hot-reload-api": "^1.3.3",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.5.3",
