--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "express-flash": "0.0.2",
+    "express-session": "^1.14.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
