--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.3.0",
-    "vuetable": "^1.3.1"
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
