--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "file-loader": "^0.9.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
+    "vue": "^1.0.26",
     "vue-bootstrap-modal": "^0.1.13",
     "vue-hot-reload-api": "^1.3.3",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.5.3",
+    "vue-resource": "^0.9.3",
+    "vue-router": "^0.7.13",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.1",
-    "vue": "^1.0.26",
-    "vue-router": "^0.7.13"
+    "webpack": "^1.13.1"
   }
 }
